# rostu

./: Readme.md
arduino/Rostu_striker/: Rostu_striker.ino  pwm_write.ino
rostu_goal_keeper/: CMakeLists.txt.backup  package.xml
rostu_goal_keeper/cfg/rostu/: rostu_vision.yaml  speed_mul.yaml
rostu_goal_keeper/launch/: rostu_goal_keeper.launch
rostu_goal_keeper/msg/: LineCoor.msg
rostu_goal_keeper/src/: rostu_calibration.cpp  rostu_camera_read.cpp  rostu_goalkeeper_navigation.cpp  rostu_line_tracking.cpp  rostu_line_tracking.cpp.backup
rostu_gs/: CMakeLists.txt  package.xml
rostu_gs/cfg/rostu/: host_ip.yaml
rostu_gs/launch/: rostu_gs.launch  rostu_host.launch
rostu_gs/src/: rostu_referee_listener.cpp
rostu_simulation/: CMakeLists.txt  package.xml
rostu_simulation/cfg/: amcl_params.yaml  rviz_navigation_eband.rviz
rostu_simulation/cfg/omnidir/: eband_local_planner_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
rostu_simulation/cfg/rostu/: map_adjustment.yaml  odom_adj.yaml  robot_speed.yaml
rostu_simulation/launch/: rostu_simulation.launch
rostu_simulation/src/: field.cpp  field.py  odom_adj.cpp  robot_speed.cpp  scanning_matching_adjustment.cpp
rostu_v2/: CMakeLists.txt  package.xml
rostu_v2/cfg/: amcl_params.yaml  rviz_navigation_teb.rviz
rostu_v2/cfg/omnidir/: costmap_common_params.yaml  global_costmap_params.yaml  teb_local_planner_params.yaml
rostu_v2/cfg/rostu/: rostu_vision.yaml  speed_mul.yaml  team.yaml
rostu_v2/launch/: rostu.launch  rostu_headless.launch
rostu_v2/maps/: field.yaml
rostu_v2/msg/: BallCoor.msg  Dribling.msg  Kicker.msg
rostu_v2/src/: rostu_ball_tracking.cpp  rostu_calibration.cpp  rostu_camera_read.cpp  rostu_line_tracking.cpp  rostu_navigation.cpp  scanning_matching_adjustment.cpp  vel_mul.cpp
