<?xml version="1.0"?>
<package format="2">
  <name>rostu_goal_keeper</name>
  <version>0.0.0</version>
  <description>The rostu_goal_keeper package</description>

  <maintainer email="laxamore@student.telkomuniversity.ac.id">nvidia</maintainer>

  <license>Laxamore</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
