<?xml version="1.0"?>
<package format="2">
  <name>rostu_gs</name>
  <version>0.0.0</version>
  <description>The rostu_gs package</description>

  <maintainer email="laxamore@student.telkomuniversity.ac.id">laxamore</maintainer>

  <license>Rostu</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>

</package>
