<?xml version="1.0"?>
<package format="2">
  <name>rostu_simulation</name>
  <version>0.0.0</version>
  <description>The rostu_simulation package</description>

  <maintainer email="laxamore@todo.todo">laxamore</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>tf</build_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>actionlib</build_depend>
  <exec_depend>actionlib</exec_depend>

  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <build_depend>move_base_msgs</build_depend>
  <exec_depend>move_base_msgs</exec_depend>


  <export>

  </export>
</package>
