<?xml version="1.0"?>
<package format="2">
  <name>rostu_v2</name>
  <version>2.2.0</version>
  <description>The rostu_v2 package</description>

  <maintainer email="laxamore@student.telkomuniversity.ac.id">laxamore</maintainer>

  <license>laxamore</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>OpenCV</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
